<resources>
    <string name="app_name" translatable="false">RicettiAmo</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="text">Text</string>
    <string name="menu_fridge">Fridge</string>
    <string name="shopping_list">Shopping List</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_logout" translatable="false">Logout</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="full_name">Full Name</string>
    <string name="description_chef">Chef Description</string>
    <string name="my_stars">My Stars</string>
    <string name="max_stars" translatable="false">30</string>
    <string name="my_position">My Position</string>
    <string name="position" translatable="false">#46</string>
    <string name="add" translatable="false">+</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="p_lost">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="txt_or">OR</string>
    <string name="txt_nUser">"New on RicettiAmo? "</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="create_account">Create Account</string>
    <string name="login_google" translatable="false">Login with Google</string>
    <string name="starters">Starters</string>
    <string name="info" translatable="false">Info</string>
    <string name="about_us">About Us</string>
    <string name="return_up">Return Up</string>
    <string name="my_recipes">My Recipes</string>
    <string name="dessert">Dessert</string>
    <string name="first_dishes">First Dishes</string>
    <string name="second_dishes">Second Dishes</string>
    <string name="toDo" translatable="false">TempModify</string>
    <string name="change_password">Change my password</string>
    <string name="advice">We recommend using a strong password that you don\'t use anywhere else</string>
    <string name="my_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Type new password again</string>
    <string name="save_changes">Save changes</string>
    <string name="change_email">Change email</string>
    <string name="change_informations">Change informations</string>
    <string name="my_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="new_email_again">Type new email again</string>
    <string name="googleWarning">For users who have logged in with Google we do not allow the change of email and password.</string>
    <string-array name="qta_array">
        <item>gr</item>
        <item>kg</item>
        <item>pz</item>
        <item>ml</item>
        <item>l</item>
    </string-array>
    <string name="profile">Profile</string>
    <string name="product_name">Ingredient</string>
    <string name="quantity">Qta</string>
    <string name="less" translatable="false">-</string>
    <string name="top" translatable="false">Top 3</string>
    <string name="login_later">LogIn later</string>
    <string name="nameRecipe" translatable="false">Spaghetti alla carbonara</string>
    <string name="informations">Difficolty: Easy \nPrep time: 15min \nCost: Low \nServing: 4 ppl.</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_1" translatable="false">Spaghetti 320g</string>
    <string name="ingredient_2">Egg yolks 6</string>
    <string name="ingredient_3">Black pepper to taste</string>
    <string name="ingredient_4" translatable="false">Guanciale 150g</string>
    <string name="ingredient_5">Pecorino romano cheese 50g</string>
    <string name="preparation">Preparation</string>
    <string name="prep_1">To prepare spaghetti alla carbonara, start by putting a saucepan with salted water on the stove to cook the pasta.  In the meantime, remove the rind from the bacon and cut it first into slices and then into strips about 1cm thick. The leftover rind can be reused to flavor other preparations. Pour the pieces of guanciale into a non-stick pan and brown for about 10 minutes over medium-high heat, be careful not to burn it otherwise it will release too strong an aroma.</string>
    <string name="prep_2">In the meantime, plunge the spaghetti into boiling water and cook them al dente. Meanwhile, pour the egg yolks into a bowl. Add the Pecorino romano cheese and season with black pepper. Mix everything with a hand whisk, until you get a smooth cream.</string>
    <string name="prep_3">Meanwhile the guanciale will be cooked; turn off the heat and using a ladle remove it from the pan, leaving the cooking liquid inside the pan itself. Transfer the guanciale to a bowl and set aside. \n\nPour a ladle of water from the pasta into the pan, together with the bacon fat. Drain the pasta al dente directly into the pan with the cooking liquid. Skip it briefly to flavor it. Remove from the heat and pour the egg and Pecorino mixture into the pan. Stir quickly to mix. To make it creamy, if necessary, you can add a little cooking water from the pasta. \n\nAdd the guanciale, mix one last time and serve the spaghetti alla carbonara immediately, adding more pecorino on the surface and a pinch of black pepper.</string>
    <string name="tip_1">Tip</string>
    <string name="tip_2">The guanciale must not be browned too much, otherwise it could release a bitter taste. It is also good to add the guanciale only at the end to maintain its crunchiness. \n\nTo avoid the omelette effect, it is important to add the yolk mixture only when the heat is off. Creaming is an important step, you have to mix until the cream has thickened. And you can adjust the consistency by adding pasta cooking water. \n\nYou can use half a dose of Pecorino romano cheese and half a dose of Parmesan for a more delicate version.</string>
    <string name="review">Your reviews</string>
    <string name="reviewer_1" translatable="false">LaMary81</string>
    <string name="review_1">One of my favourites dishes! My kids always ask me to make carbonara.</string>
    <string name="star_1" translatable="false">5/5</string>
    <string name="reviewer_2" translatable="false">Davide</string>
    <string name="review_2">I prefer to use Parmesan because Pecorino is a bit too salty for my taste.</string>
    <string name="star_2" translatable="false">3,5/5</string>
    <string name="write_review">Write a review</string>
    <string name="confirmation">Are you sure?</string>
    <string name="reset_password">Reset Password</string>
    <string name="instruction_reset">All you need to reset your password is your email address!</string>
    <string name="instruction_reset2">You will receive an email containing instructions for resetting your password</string>
    <string name="instruction_reset3">Can\'t find the email? Try looking in spam</string>
    <string name="empty_fields">The fields must not be empty</string>
    <string name="field_not_match">The fields do not match</string>
    <string name="error_no_google_account_found_message">"No Google accounts have been found"</string>
    <string name="login_error">An error occurred while logging in. Please check your data and connection and try again</string>
    <string name="registration_error">An error occurred while creating your account. Please check your data and connection and try again</string>
    <string name="updateEmail_error">An error occurred while updating your email. Please check your data and connection and try again</string>
    <string name="updatePassword_error">An error occurred while updating your password. Please check your data and connection and try again</string>
    <string name="updateData_error">An error occurred while updating your data. Please check your connection and try again</string>
    <string name="updatePhoto_error">An error occurred while updating your photo. Please check your connection and try again</string>
    <string name="getPhoto_error">An error occurred while retrieving your photo. Please check your connection and try again</string>
    <string name="retrievingDatabase_error">There was an error retrieving your data. Please check your connection and try again</string>
    <string name="writeDatabase_error">There was an error saving your data. Please check your connection and try again</string>
    <string name="retry">Retry</string>
    <string name="add_photo">Add the main picture</string>
    <string name="type_nameRecipe">Type name of the recipe</string>
    <string name="difficulty">Difficulty: </string>
    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Average</item>
        <item>Hard</item>
    </string-array>
    <string name="prep_time">Prep time:  </string>
    <string name="min">minutes</string>
    <string name="cost">Cost: </string>
    <string-array name="type_array">
        <item>@string/starters</item>
        <item>@string/first_dishes</item>
        <item>@string/second_dishes</item>
        <item>@string/dessert</item>
    </string-array>
    <string name="serving">Serving: </string>
    <string name="people">ppl.</string>
    <string name="add_ingredient">Add an ingredient</string>
    <string name="add_step">Add a step</string>
    <string name="add_photo_step">Add a photo</string>
    <string name="logo_image" translatable="false">Logo</string>
    <string name="search_recipe">Search Recipes</string>
    <string name="list_size_message">The size of the list is</string>
    <string name="top_10_chef">Top 10 Chefs</string>
    <string name="recipes_api_key" translatable="false">02817c2dcd744b73bb0cd25814f1bce9</string>
    <string name="character250" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ac risus in augue fringilla vestibulum. Suspendisse tempor sem quis tortor blandit aliquam. Pellentesque vulputate lorem in dui aliquet, eu tincidunt mi finibus. Morbi bibendum fusce.</string>
    <string name="search">Search</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="api_key_error">API Key not valid or maximum number of request reached</string>
    <string name="error_retrieving_recipe">Error in retrieving recipes</string>
    <string name="error_retrieving_ingredient">Error in retrieving recipes</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_10" translatable="false">10</string>
    <string name="recipes_added_to_favorite_list_message">Recipe added to the favorite list</string>
    <string name="recipes_removed_from_favorite_list_message">Recipe removed from the favorite list</string>
    <string name="main_picture">Main Picture of the recipe</string>
    <string name="_informations">Informations</string>
    <string name="name_of_the_ingredient">Name of the ingredient</string>
    <string name="unit">Unit of measure</string>
    <string name="type_new_step">Type new step</string>
    <string name="save_recipe">Save recipe</string>
    <string name="delete_recipe">Delete recipe</string>
    <string name="lose_data">Going back you will lose your changes</string>
    <string name="come_back">Come back</string>
    <string name="add_review">Add review</string>
    <string name="score">Score</string>
    <string name="noReview">There are no comments yet for this recipe. Write the first!</string>
    <string name="comment">Review</string>
</resources>