<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="cfgmm.ricettiamo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fridge"
        android:name="cfgmm.ricettiamo.ui.fridge.FridgeFragment"
        android:label="@string/menu_fridge"
        tools:layout="@layout/fragment_fridge" />

    <fragment
        android:id="@+id/nav_shoppingList"
        android:name="cfgmm.ricettiamo.ui.shoppingList.ShoppingListFragment"
        android:label="@string/shopping_list"
        tools:layout="@layout/fragment_shopping_list" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="cfgmm.ricettiamo.ui.favourites.FavouritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="cfgmm.ricettiamo.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="cfgmm.ricettiamo.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_my_recipe2"
            app:destination="@id/nav_my_recipe" />
    </fragment>

    <fragment
        android:id="@+id/nav_my_recipe"
        android:name="cfgmm.ricettiamo.ui.myRecipes.MyRecipes"
        android:label="@string/my_recipes"
        tools:layout="@layout/fragment_my_recipes" />

    <fragment
        android:id="@+id/nav_ranking"
        android:name="cfgmm.ricettiamo.Ranking"
        android:label="@string/top_10_chef"
        tools:layout="@layout/fragment_ranking" />

    <fragment
        android:id="@+id/nav_upgrade"
        android:name="cfgmm.ricettiamo.ui.upgradeAccount.UpgradeAccountFragment"
        android:label="@string/upgrade_button"
        tools:layout="@layout/fragment_upgrade_account" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="cfgmm.ricettiamo.ui.logout.LogoutDialogFragment"
        android:label="@string/menu_logout" />

</navigation>