<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.navigation_drawer.RecipeDetailsFragment">

    <!--parent-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageRecipe"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:background="@drawable/esempio_carbonara"
            android:contentDescription="@string/toDo" />


        <TextView
            android:id="@+id/nameRecipe"
            style="@style/firstTitle"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameRecipe" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/src_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/serving"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/src_servings_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="15dp"
                android:text="@string/serving"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:id="@+id/src_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/prep_time"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/src_prep_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="15dp"
                android:text="@string/prep_time"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="15dp">

            <TextView
                android:id="@+id/src_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/cost"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/src_cost_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginStart="15dp"
                android:text="@string/cost"
                android:textSize="14sp" />
        </LinearLayout>


        <!--ingredienti-->
        <TextView
            android:id="@+id/ingredients"
            style="@style/secondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:layout_marginHorizontal="15dp"/>

        <!--preparazione-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_ingredients_recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/prep"
            style="@style/secondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/preparation" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_steps_recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/review"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="15dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addRewiewText_layout"
                style="@style/textInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"

                app:counterEnabled="true"
                app:counterMaxLength="250">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    style="@style/textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comment"
                    android:label="@string/comment"
                    android:maxLength="250"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_score_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/add_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/score"
                    android:inputType="none"
                    android:label="@string/score"
                    android:textSize="18sp"
                    app:simpleItems="@array/point_array" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add_review_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_review"
            android:layout_marginHorizontal="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/noReview"
            style="@style/secondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/noReview" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>