<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navigation_drawer.AddNewRecipeFragment">

    <!--parent-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/imageRecipe"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:background="@color/orange"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pd_email"
                android:label="@string/type_nameRecipe"
                android:hint="@string/type_nameRecipe" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/difficolty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/difficulty"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/difficulty_array"
                    android:minWidth="30dp"
                    android:minHeight="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/prep_time"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:padding="5dp"
                    android:hint="@string/min"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="number"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/prep_time">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/cost"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:entries="@array/cost_array"
                    android:minWidth="30dp"
                    android:minHeight="40dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/serving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/serving"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:padding="5dp"
                    android:hint="@string/people"
                    android:fontFamily="@font/montserrat"
                    android:autofillHints="number"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:layout_margin="15dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_ingredient_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_ingredient"
                android:label="Type name of the ingredient"
                android:hint="Type name of the ingredient" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_ingredient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_ingredient"
            android:layout_marginHorizontal="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/preparation"
            android:layout_marginHorizontal="15dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_step_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:endIconMode="clear_text"
            app:errorEnabled="true" >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_step"
                android:label="Type new step"
                android:hint="Type new step" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_step_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_step"
            android:layout_marginHorizontal="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="20dp"/>

        <Button
            android:id="@+id/add_photo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/add_photo_step"
            android:layout_marginHorizontal="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="20dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"/>

        <Button
            android:id="@+id/save_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="Save Recipe"
            android:layout_marginHorizontal="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:cornerRadius="20dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>