<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:id="@+id/nh_foto"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/user"
        android:contentDescription="@string/toDo"
        app:layout_constraintBottom_toTopOf="@+id/nh_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nh_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="20dp"
        android:text="@string/name"
        android:textColor="?colorOnSecondary"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nh_foto" />

    <Button
        android:id="@+id/nh_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/nh_foto"
        app:layout_constraintStart_toEndOf="@+id/nh_foto"
        app:layout_constraintTop_toTopOf="@+id/nh_foto"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>